--- a/index.html
+++ b/index.html
@@ -295,8 +295,8 @@
             <p><em>Jodhpur, Rajasthan, India</em></p>
             <p>
             <ul>
-              <li>Build User Interfaces of Main website.</li>
-              <li>Coordinating and managing tasks along with 10+ members of the Graphic Team.</li>
+              <li>Built User Interfaces of Main website.</li>
+              <li>Coordinated and managed tasks along with 10+ members of the Graphic Team.</li>
               <li>Curator of the graphical content.</li>
               
             </ul>
@@ -322,7 +322,7 @@
             <p><em>Chennai, India</em></p>
             <p>
             <ul>
-              <li>Build User Interfaces of Websites of Aaruush'21
+              <li>Built User Interfaces of Websites of Aaruush'21
                 - T Summit and its portal
                 - Campus Ambassador Portal</li>
               <li>Lead a team of 50+ Students</li>
@@ -340,7 +340,7 @@
             <p>
             <ul>
               <li>Student Coordinator connecting the Alumni with the present students.</li>
-              <li>Coordinating and managing events along with 70+ members of the DAA Team.</li>
+              <li>Coordinated and managed events along with 70+ members of the DAA Team.</li>
               <li>Curator of the graphical content.</li>
               
             </ul>
@@ -357,8 +357,8 @@
             <ul>
               <li>Conducted Events such as Industrial Conclave, Unconference, Luminary Addresses, aaruush Hangoutsand several events during the edition.</li>
               <li>Guest and Artist management.</li>
-              <li>Acquiring Sponsorships and partnerships of the fest.</li>
-              <li>Leading a team of 80+ Students.</li>
+              <li>Acquired Sponsorships and partnerships of the fest.</li>
+              <li>Lead a team of 80+ Students.</li>
              </ul>
             </p>
             <h5>Committee Member : 2020 March - 2021 July</h5>
